--- a/ShanxunGetPwd/app/src/main/res/layout/activity_main.xml
+++ b/ShanxunGetPwd/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:text="@string/tip_waitToClick"/>
     </LinearLayout>
     <Button
@@ -25,8 +25,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
         android:text="@string/btn_getPwd"
         android:textColor="#ffffff"
+        android:layout_marginBottom="20dp"
         android:background="#3f51b5"/>
+    <TextView
+        android:id="@+id/MadeBy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/madeBy"/>
 </LinearLayout>
